[tool.poetry]
name = "combinatorpush"
version = "0.1.0"
description = ""
authors = ["amarokkin <jasminesingh.2011@gmail.com>"]

[tool.poetry.scripts]
  start = "combinatorpush.main:start"

[tool.poetry.dependencies]
python = "^3.8"
combinatorapi = "^0.1.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
